objects/Enrollment_Import_2_50__c.object
<CustomObject>
    <fields>
        <fullName>AE_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AE ID</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AE Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_SEG_SIZE_DESC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AF SEG SIZE DESC</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AG_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AG ID</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AG_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AG Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AM ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_NAME__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AM NAME</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Number</label>
        <length>7</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Break_Out_Level__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Break Out Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracts__c</fullName>
        <label>Contracts</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Anniversary_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Anniversary Date</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EIN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External Key</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_id__c</fullName>
        <formula>Account_Number__c +  TEXT(Contract_Effective_Date__c)+' 00:00:00' + 'X2_50'</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSP_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FSP ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSP_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FSP Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GP ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GP Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRGR_MCTR_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GRGR MCTR Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRGR_STS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GRGR STS</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRRT_RT_ST__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GRRT RT ST</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRRT_SIC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GRRT SIC</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Type</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Legal Entity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Market Segment</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metal_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Metal Description</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metal_Level__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Metal Level</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Business_Indicator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Business Indicator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Anniversary_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Anniversary Date</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Cycle__c</fullName>
        <description>This formula field checks to be true if a record is on-cycle termed when termination date is exactly a month before renewal date provided that it is the same year or if the termination month is 12 and the renewal month is 1</description>
        <formula>if (OR (MONTH(Renewal_Anniversary_Date__c) = 1 &amp;&amp; MONTH(Term_Date__c)=12,
(MONTH(Renewal_Anniversary_Date__c) - MONTH(Term_Date__c)=1)&amp;&amp;(Year(Renewal_Anniversary_Date__c) = Year(Term_Date__c))), True, False )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>On Cycle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Original Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PDB_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDB ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDB_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDB Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Group_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Group Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box will be checked if this record is processes successfully by the Enrollment_2_50_opportunity_Process</description>
        <label>Processed Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processed_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Processed Type</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rating_State</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reinstatement_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reinstatement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Anniversary_Date__c</fullName>
        <description>if month of contract effective date is more than the month of Report date then
Contract_Effective_Date__c = '20140125' then Renewal_Anniversary_Date__c = '2013-01-01'
ELSE
Use the Rpt_Dt__c for the year, Contract_Effective_Date__c's Month to create the Renewal_Anniversary_Date__c.
(i.e.: Rpt_Dt__c = '201401' and Contract_Effective_Date__c = '20140325' then Renewal_Anniversary_Date__c = '20140301'
The day is always defaulted to "01" for both situations.</description>
        <formula>iF (VALUE(RIGHT(Rpt_dt__c,2)) &lt; Month(Contract_Effective_Date__c), 
DATEVALUE(TEXT(VALUE(LEFT(Rpt_dt__c, 4)) -1) + "-" + TEXT(MONTH(Contract_Effective_Date__c)) + "-01"), 
DATEVALUE(LEFT(Rpt_dt__c, 4) + "-" + TEXT(MONTH(Contract_Effective_Date__c)) + "-01") 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Anniversary_Month__c</fullName>
        <label>Renewal Anniversary Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Risk</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rpt_dt__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rpt dt</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Dt__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Run Dt</label>
        <length>23</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SB id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SB Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SB</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Product__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SFDC Product</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SIC</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Rep</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>System</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Term_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Term_Reason</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwriting_Entity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Underwriting Entity</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <description>Holds the Enrollment Import information for 2_50 segment</description>
    <label>Enrollment Import 2-50</label>
    <nameField>
        <displayFormat>ENI2-50-{00000}</displayFormat>
        <label>Enrollment Import 2-50 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollments Imports 2-50</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Processed__c</columns>
        <columns>Processed_Opportunity__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Number__c</columns>
        <columns>SFDC_Product__c</columns>
        <columns>Contracts__c</columns>
        <columns>Rpt_dt__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Not_Processed</fullName>
        <columns>NAME</columns>
        <columns>Processed__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Number__c</columns>
        <columns>SFDC_Product__c</columns>
        <columns>Contracts__c</columns>
        <columns>Rpt_dt__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Not Processed</label>
    </listViews>
    <listViews>
        <fullName>All_Not_Processed_Opportunity</fullName>
        <columns>NAME</columns>
        <columns>Processed__c</columns>
        <columns>Processed_Opportunity__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Number__c</columns>
        <columns>SFDC_Product__c</columns>
        <columns>Contracts__c</columns>
        <columns>Rpt_dt__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed_Opportunity__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Not Processed Opportunity</label>
    </listViews>
    <listViews>
        <fullName>All_Processed</fullName>
        <columns>NAME</columns>
        <columns>Processed__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Number__c</columns>
        <columns>SFDC_Product__c</columns>
        <columns>Contracts__c</columns>
        <columns>Rpt_dt__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Processed</label>
    </listViews>
</CustomObject>